// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlatformActions Should return a dispatch object for the hideGlobalFilter method: dispatch object 1`] = `
{
  "payload": Promise {},
  "type": "PLATFORM_GLOBAL_FILTER_HIDE",
}
`;

exports[`PlatformActions Should return response content for createExport method: dispatch object 1`] = `
[
  [
    {
      "meta": {
        "id": undefined,
        "notifications": {},
      },
      "payload": Promise {},
      "type": "SET_PLATFORM_EXPORT_CREATE",
    },
  ],
]
`;

exports[`PlatformActions Should return response content for getExistingExports method: dispatch object 1`] = `
[
  [
    {
      "meta": {
        "notifications": {},
      },
      "payload": Promise {},
      "type": "GET_PLATFORM_EXPORT_EXISTING",
    },
  ],
]
`;

exports[`PlatformActions Should return response content for getExistingExportsStatus method: dispatch object 1`] = `
[
  [
    {
      "meta": {
        "notifications": undefined,
      },
      "payload": Promise {},
      "type": "SET_PLATFORM_EXPORT_EXISTING_STATUS",
    },
  ],
]
`;

exports[`PlatformActions Should return response content for removeExistingExports method: dispatch object 1`] = `
[
  [
    {
      "meta": {
        "notifications": undefined,
      },
      "payload": Promise {},
      "type": "DELETE_PLATFORM_EXPORT_EXISTING",
    },
  ],
]
`;
